FIX bug: pop-ups are too big at large screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -262,6 +262,7 @@ p.orbitron{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 300px;
 }
 
 .pop_up_title {
